@@ -1,0 +1,8 @@
+#!/bin/bash
+
+# Load common definitions
+. scripts/common.defs
+
+(cd $LISP/erc && find . -maxdepth 1 -mindepth 1 -type f -exec cp {} $OLDPWD \;)
+cp $ETC/ERC-NEWS etc/
+cp $MAN/erc.texi man/
