@@ -1,8 +1,13 @@
 2006-01-29  Michael Olson  <mwolson@gnu.org>
 
+	* erc-speedbar.el (erc-speedbar-buttons): Fix reference to free
+	variable.
+	(erc-speedbar-goto-buffer): Fix compiler warning.
+
 	* erc-ibuffer.el: Use `define-ibuffer-filter' instead of
 	`ibuffer-degine-limiter'.  Use `define-ibuffer-column' instead of
-	`ibuffer-define-column'.
+	`ibuffer-define-column'.  Require 'ibuf-ext so that the macros
+	work without compiler warnings.
 
 	* man/erc.texi (Obtaining ERC, Installation): Note that these
 	sections may be skipped if using the version of ERC that comes
